# monorepo-nix-template

./: .gitignore  README.md  flake.nix
haskell/: default.nix  haskell-template.cabal
haskell/src/: Main.hs
nix/: mergeDevShells.nix
rusty/: Cargo.toml  default.nix
rusty/src/: lib.rs
